# myconda

./: README.MD  pyproject.toml
src/myconda/: __init__.py
src/td_sync/: __init__.py  cancel_flows.py  sync.py  testing.py  trigger.py
src/td_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
