[project]
name = "td-sync"
version = "0.1.0"
description = "Register/update Tabsdata functions from any file"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tabsdata"]  # or the exact package name you use

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
td-sync = "td_sync.sync:main"  # optional CLI
