[project]
name = "td-sync"
version = "0.1.2"
description = "Register/update Tabsdata functions from any file"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["tabsdata"]  # or the exact package name you use

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
td-cancel-flows = "td_sync.cancel_flows:cancel_flows"
